Kubernetes/api-gateway-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\MSI-PC\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway-service
  name: api-gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\MSI-PC\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe --file docker-compose.yml convert
        kompose.version: 1.31.2 (a92241f79)
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
      creationTimestamp: null
      labels:
        io.kompose.network/k8s-study-sync-network: "true"
        io.kompose.service: api-gateway-service
        prometheus-scrape: "true"
    spec:
      containers:
        - image: jenniferoentoro/study-sync-web-application-apigateway:latest
          name: api-gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      restartPolicy: Always
status: {}
