Kubernetes/mongodb-container-source-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\MSI-PC\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb-container-source
  name: mongodb-container-source
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb-container-source
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\MSI-PC\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe --file docker-compose.yml convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/k8s-study-sync-network: "true"
        io.kompose.service: mongodb-container-source
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: rootpassword
            - name: MONGO_INITDB_ROOT_USERNAME
              value: root
          image: mongo:latest
          name: mongodb-container-source
          ports:
            - containerPort: 27017
              hostPort: 27018
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-data-container-source
      restartPolicy: Always
      volumes:
        - name: mongodb-data-container-source
          persistentVolumeClaim:
            claimName: mongodb-data-container-source
status: {}
