Kubernetes/api-gateway-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: api-gateway-service
  name: api-gateway-service
spec:
  type: LoadBalancer
  ports:
    - name: "http"
      port: 8081
      targetPort: 8080
      # nodePort: 30002

  selector:
    io.kompose.service: api-gateway-service
# status:
#   loadBalancer: {}
