Kubernetes/source-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: source-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: source-service
  template:
    metadata:
      labels:
        app: source-service
    spec:
      containers:
        - name: source-service
          image: jenniferoentoro/study-sync-web-application-source_service:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: source-service
spec:
  type: NodePort
  selector:
    app: source-service
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
      nodePort: 30001
