Kubernetes/user-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
        io.kompose.network/k8s-study-sync-network: "true"
    spec:
      containers:
        - name: user-service
          image: jenniferoentoro/study-sync-web-application-user-service:latest
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: config-volume
          configMap:
            name: my-config
            items:
              - key: firebase-config.json
                path: firebase-config.json

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
      nodePort: 30000
